# elicit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
discovery_engine/: __init__.py  config.py  database.py
discovery_engine/api/: analysis.py  calibration.py  coaching.py  interviews.py  main.py  projects.py  simulation.py
discovery_engine/engine/: calibration.py  coaching.py  extraction.py  job_runner.py  opportunity_tree.py  recommender.py  simulator.py  synthesis.py
discovery_engine/llm/: __init__.py  client.py  parsers.py
discovery_engine/llm/prompts/: adversarial_persona_system.txt  calibration_comparison.txt  cross_interview_synthesis.txt  (+10 more)
discovery_engine/models/: __init__.py  analysis_job.py  base.py  calibration.py  coaching.py  extraction.py  interview.py  persona.py  project.py  recommendation.py  synthesis.py
discovery_engine/schemas/: __init__.py  calibration.py  coaching.py  extraction.py  interview.py  normalization.py  persona.py  project.py  recommendation.py
scripts/: run_dev.sh  seed_sample_data.py
scripts/fixtures/: web_interview_camera.txt  web_interview_mattress.txt  web_interview_smartphone.txt
streamlit_app/: app.py
streamlit_app/pages/: 01_projects.py  02_upload.py  03_analysis.py  04_opportunity_tree.py  05_recommendations.py  06_interview_prep.py  07_interview_review.py  08_simulator.py  09_calibration.py
tests/: conftest.py  test_analysis_jobs.py  test_engine_regressions.py  test_extraction.py  test_fixes.py
tests/fixtures/: sample_transcript_1.txt  sample_transcript_2.txt
